add radam, evo, sknet

--- a/cassava_classification.ipynb
+++ b/cassava_classification.ipynb
@@ -1975,7 +1975,127 @@
       "Epoch: 22. Validation. Loss: 0.625 | Accuracy: 0.837: 100%|██████████| 426/426 [00:13<00:00, 30.59it/s]\n",
       "Epoch: 23. Train.      Loss: 0.130 | Accuracy: 0.744: 100%|██████████| 2267/2267 [04:45<00:00,  7.93it/s]\n",
       "Epoch: 23. Validation. Loss: 0.594 | Accuracy: 0.846: 100%|██████████| 426/426 [00:13<00:00, 30.70it/s]\n",
-      "Epoch: 24. Train.      Loss: 0.130 | Accuracy: 0.744:  87%|████████▋ | 1967/2267 [04:08<00:37,  7.97it/s]"
+      "Epoch: 24. Train.      Loss: 0.130 | Accuracy: 0.743: 100%|██████████| 2267/2267 [04:46<00:00,  7.90it/s]\n",
+      "Epoch: 24. Validation. Loss: 0.575 | Accuracy: 0.841: 100%|██████████| 426/426 [00:14<00:00, 29.63it/s]\n",
+      "Epoch: 25. Train.      Loss: 0.130 | Accuracy: 0.743: 100%|██████████| 2267/2267 [04:50<00:00,  7.80it/s]\n",
+      "Epoch: 25. Validation. Loss: 0.581 | Accuracy: 0.835: 100%|██████████| 426/426 [00:14<00:00, 29.70it/s]\n",
+      "Epoch: 26. Train.      Loss: 0.129 | Accuracy: 0.750: 100%|██████████| 2267/2267 [04:51<00:00,  7.78it/s]\n",
+      "Epoch: 26. Validation. Loss: 0.571 | Accuracy: 0.836: 100%|██████████| 426/426 [00:13<00:00, 30.64it/s]\n",
+      "Epoch: 27. Train.      Loss: 0.129 | Accuracy: 0.745: 100%|██████████| 2267/2267 [04:49<00:00,  7.82it/s]\n",
+      "Epoch: 27. Validation. Loss: 0.586 | Accuracy: 0.836: 100%|██████████| 426/426 [00:15<00:00, 28.33it/s]\n",
+      "Epoch: 28. Train.      Loss: 0.129 | Accuracy: 0.746: 100%|██████████| 2267/2267 [04:57<00:00,  7.61it/s]\n",
+      "Epoch: 28. Validation. Loss: 0.567 | Accuracy: 0.845: 100%|██████████| 426/426 [00:15<00:00, 28.34it/s]\n",
+      "Epoch: 29. Train.      Loss: 0.130 | Accuracy: 0.742: 100%|██████████| 2267/2267 [04:57<00:00,  7.61it/s]\n",
+      "Epoch: 29. Validation. Loss: 0.583 | Accuracy: 0.839: 100%|██████████| 426/426 [00:13<00:00, 30.64it/s]\n",
+      "Epoch: 30. Train.      Loss: 0.128 | Accuracy: 0.750: 100%|██████████| 2267/2267 [04:46<00:00,  7.92it/s]\n",
+      "Epoch: 30. Validation. Loss: 0.586 | Accuracy: 0.839: 100%|██████████| 426/426 [00:13<00:00, 30.70it/s]\n",
+      "Epoch: 31. Train.      Loss: 0.128 | Accuracy: 0.750: 100%|██████████| 2267/2267 [04:45<00:00,  7.94it/s]\n",
+      "Epoch: 31. Validation. Loss: 0.611 | Accuracy: 0.834: 100%|██████████| 426/426 [00:13<00:00, 30.80it/s]\n",
+      "Epoch: 32. Train.      Loss: 0.129 | Accuracy: 0.749: 100%|██████████| 2267/2267 [04:45<00:00,  7.93it/s]\n",
+      "Epoch: 32. Validation. Loss: 0.616 | Accuracy: 0.837: 100%|██████████| 426/426 [00:13<00:00, 30.73it/s]\n",
+      "Epoch: 33. Train.      Loss: 0.128 | Accuracy: 0.753: 100%|██████████| 2267/2267 [04:46<00:00,  7.91it/s]\n",
+      "Epoch: 33. Validation. Loss: 0.572 | Accuracy: 0.838: 100%|██████████| 426/426 [00:13<00:00, 30.75it/s]\n",
+      "Epoch: 34. Train.      Loss: 0.128 | Accuracy: 0.754: 100%|██████████| 2267/2267 [04:47<00:00,  7.90it/s]\n",
+      "Epoch: 34. Validation. Loss: 0.551 | Accuracy: 0.859: 100%|██████████| 426/426 [00:13<00:00, 30.71it/s]\n",
+      "  0%|          | 0/2267 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Save best weight at acc 0.8594, epoch: 34\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 35. Train.      Loss: 0.128 | Accuracy: 0.756: 100%|██████████| 2267/2267 [04:46<00:00,  7.91it/s]\n",
+      "Epoch: 35. Validation. Loss: 0.578 | Accuracy: 0.850: 100%|██████████| 426/426 [00:13<00:00, 30.70it/s]\n",
+      "Epoch: 36. Train.      Loss: 0.128 | Accuracy: 0.750: 100%|██████████| 2267/2267 [04:46<00:00,  7.90it/s]\n",
+      "Epoch: 36. Validation. Loss: 0.629 | Accuracy: 0.836: 100%|██████████| 426/426 [00:14<00:00, 30.31it/s]\n",
+      "Epoch: 37. Train.      Loss: 0.127 | Accuracy: 0.756: 100%|██████████| 2267/2267 [04:52<00:00,  7.75it/s]\n",
+      "Epoch: 37. Validation. Loss: 0.581 | Accuracy: 0.844: 100%|██████████| 426/426 [00:14<00:00, 29.12it/s]\n",
+      "Epoch: 38. Train.      Loss: 0.128 | Accuracy: 0.755: 100%|██████████| 2267/2267 [04:55<00:00,  7.67it/s]\n",
+      "Epoch: 38. Validation. Loss: 0.622 | Accuracy: 0.846: 100%|██████████| 426/426 [00:14<00:00, 28.99it/s]\n",
+      "Epoch: 39. Train.      Loss: 0.127 | Accuracy: 0.758: 100%|██████████| 2267/2267 [04:44<00:00,  7.97it/s]\n",
+      "Epoch: 39. Validation. Loss: 0.595 | Accuracy: 0.846: 100%|██████████| 426/426 [00:13<00:00, 31.23it/s]\n",
+      "Epoch: 40. Train.      Loss: 0.127 | Accuracy: 0.763: 100%|██████████| 2267/2267 [04:39<00:00,  8.11it/s]\n",
+      "Epoch: 40. Validation. Loss: 0.577 | Accuracy: 0.844: 100%|██████████| 426/426 [00:13<00:00, 31.17it/s]\n",
+      "Epoch: 41. Train.      Loss: 0.127 | Accuracy: 0.758: 100%|██████████| 2267/2267 [04:39<00:00,  8.11it/s]\n",
+      "Epoch: 41. Validation. Loss: 0.541 | Accuracy: 0.848: 100%|██████████| 426/426 [00:13<00:00, 31.09it/s]\n",
+      "Epoch: 42. Train.      Loss: 0.127 | Accuracy: 0.756: 100%|██████████| 2267/2267 [04:39<00:00,  8.10it/s]\n",
+      "Epoch: 42. Validation. Loss: 0.562 | Accuracy: 0.846: 100%|██████████| 426/426 [00:13<00:00, 31.26it/s]\n",
+      "Epoch: 43. Train.      Loss: 0.128 | Accuracy: 0.757: 100%|██████████| 2267/2267 [04:39<00:00,  8.12it/s]\n",
+      "Epoch: 43. Validation. Loss: 0.560 | Accuracy: 0.854: 100%|██████████| 426/426 [00:13<00:00, 31.30it/s]\n",
+      "Epoch: 44. Train.      Loss: 0.126 | Accuracy: 0.761: 100%|██████████| 2267/2267 [04:40<00:00,  8.07it/s]\n",
+      "Epoch: 44. Validation. Loss: 0.589 | Accuracy: 0.853: 100%|██████████| 426/426 [00:13<00:00, 30.53it/s]\n",
+      "Epoch: 45. Train.      Loss: 0.127 | Accuracy: 0.763: 100%|██████████| 2267/2267 [04:44<00:00,  7.98it/s]\n",
+      "Epoch: 45. Validation. Loss: 0.600 | Accuracy: 0.836: 100%|██████████| 426/426 [00:13<00:00, 30.94it/s]\n",
+      "Epoch: 46. Train.      Loss: 0.127 | Accuracy: 0.761: 100%|██████████| 2267/2267 [04:42<00:00,  8.03it/s]\n",
+      "Epoch: 46. Validation. Loss: 0.594 | Accuracy: 0.847: 100%|██████████| 426/426 [00:13<00:00, 30.52it/s]\n",
+      "Epoch: 47. Train.      Loss: 0.127 | Accuracy: 0.762: 100%|██████████| 2267/2267 [04:44<00:00,  7.97it/s]\n",
+      "Epoch: 47. Validation. Loss: 0.540 | Accuracy: 0.839: 100%|██████████| 426/426 [00:13<00:00, 30.58it/s]\n",
+      "Epoch: 48. Train.      Loss: 0.126 | Accuracy: 0.764: 100%|██████████| 2267/2267 [04:44<00:00,  7.96it/s]\n",
+      "Epoch: 48. Validation. Loss: 0.564 | Accuracy: 0.846: 100%|██████████| 426/426 [00:14<00:00, 30.24it/s]\n",
+      "Epoch: 49. Train.      Loss: 0.126 | Accuracy: 0.767: 100%|██████████| 2267/2267 [04:44<00:00,  7.96it/s]\n",
+      "Epoch: 49. Validation. Loss: 0.528 | Accuracy: 0.856: 100%|██████████| 426/426 [00:14<00:00, 30.37it/s]\n",
+      "Epoch: 50. Train.      Loss: 0.126 | Accuracy: 0.761: 100%|██████████| 2267/2267 [04:44<00:00,  7.96it/s]\n",
+      "Epoch: 50. Validation. Loss: 0.578 | Accuracy: 0.861: 100%|██████████| 426/426 [00:14<00:00, 29.80it/s]\n",
+      "  0%|          | 0/2267 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Save best weight at acc 0.8615, epoch: 50\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 51. Train.      Loss: 0.126 | Accuracy: 0.761: 100%|██████████| 2267/2267 [04:48<00:00,  7.87it/s]\n",
+      "Epoch: 51. Validation. Loss: 0.588 | Accuracy: 0.850: 100%|██████████| 426/426 [00:14<00:00, 29.88it/s]\n",
+      "Epoch: 52. Train.      Loss: 0.127 | Accuracy: 0.765: 100%|██████████| 2267/2267 [04:43<00:00,  7.99it/s]\n",
+      "Epoch: 52. Validation. Loss: 0.573 | Accuracy: 0.854: 100%|██████████| 426/426 [00:13<00:00, 31.10it/s]\n",
+      "Epoch: 53. Train.      Loss: 0.125 | Accuracy: 0.772: 100%|██████████| 2267/2267 [04:48<00:00,  7.86it/s]\n",
+      "Epoch: 53. Validation. Loss: 0.611 | Accuracy: 0.851: 100%|██████████| 426/426 [00:13<00:00, 30.50it/s]\n",
+      "Epoch: 54. Train.      Loss: 0.124 | Accuracy: 0.772: 100%|██████████| 2267/2267 [04:47<00:00,  7.88it/s]\n",
+      "Epoch: 54. Validation. Loss: 0.578 | Accuracy: 0.853: 100%|██████████| 426/426 [00:13<00:00, 30.56it/s]\n",
+      "Epoch: 55. Train.      Loss: 0.125 | Accuracy: 0.768: 100%|██████████| 2267/2267 [04:46<00:00,  7.90it/s]\n",
+      "Epoch: 55. Validation. Loss: 0.592 | Accuracy: 0.844: 100%|██████████| 426/426 [00:13<00:00, 30.64it/s]\n",
+      "Epoch: 56. Train.      Loss: 0.125 | Accuracy: 0.765: 100%|██████████| 2267/2267 [04:45<00:00,  7.93it/s]\n",
+      "Epoch: 56. Validation. Loss: 0.605 | Accuracy: 0.856: 100%|██████████| 426/426 [00:13<00:00, 30.60it/s]\n",
+      "Epoch: 57. Train.      Loss: 0.126 | Accuracy: 0.765: 100%|██████████| 2267/2267 [04:48<00:00,  7.85it/s]\n",
+      "Epoch: 57. Validation. Loss: 0.558 | Accuracy: 0.856: 100%|██████████| 426/426 [00:14<00:00, 29.91it/s]\n",
+      "Epoch: 58. Train.      Loss: 0.125 | Accuracy: 0.768: 100%|██████████| 2267/2267 [04:48<00:00,  7.85it/s]\n",
+      "Epoch: 58. Validation. Loss: 0.565 | Accuracy: 0.851: 100%|██████████| 426/426 [00:14<00:00, 30.14it/s]\n",
+      "Epoch: 59. Train.      Loss: 0.126 | Accuracy: 0.763: 100%|██████████| 2267/2267 [04:48<00:00,  7.85it/s]\n",
+      "Epoch: 59. Validation. Loss: 0.537 | Accuracy: 0.862: 100%|██████████| 426/426 [00:14<00:00, 30.05it/s]\n",
+      "  0%|          | 0/2267 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Save best weight at acc 0.8621, epoch: 59\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 60. Train.      Loss: 0.125 | Accuracy: 0.769: 100%|██████████| 2267/2267 [04:52<00:00,  7.75it/s]\n",
+      "Epoch: 60. Validation. Loss: 0.616 | Accuracy: 0.845: 100%|██████████| 426/426 [00:15<00:00, 27.89it/s]\n",
+      "Epoch: 61. Train.      Loss: 0.126 | Accuracy: 0.767: 100%|██████████| 2267/2267 [05:04<00:00,  7.44it/s]\n",
+      "Epoch: 61. Validation. Loss: 0.556 | Accuracy: 0.849: 100%|██████████| 426/426 [00:14<00:00, 30.07it/s]\n",
+      "Epoch: 62. Train.      Loss: 0.125 | Accuracy: 0.768: 100%|██████████| 2267/2267 [04:49<00:00,  7.84it/s]\n",
+      "Epoch: 62. Validation. Loss: 0.583 | Accuracy: 0.855: 100%|██████████| 426/426 [00:13<00:00, 30.74it/s]\n",
+      "Epoch: 63. Train.      Loss: 0.125 | Accuracy: 0.771:  73%|███████▎  | 1655/2267 [03:30<01:19,  7.75it/s]"
      ]
     }
    ],
