--- a/cassava_classification.ipynb
+++ b/cassava_classification.ipynb
@@ -1775,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2095,7 +2095,110 @@
       "Epoch: 61. Validation. Loss: 0.556 | Accuracy: 0.849: 100%|██████████| 426/426 [00:14<00:00, 30.07it/s]\n",
       "Epoch: 62. Train.      Loss: 0.125 | Accuracy: 0.768: 100%|██████████| 2267/2267 [04:49<00:00,  7.84it/s]\n",
       "Epoch: 62. Validation. Loss: 0.583 | Accuracy: 0.855: 100%|██████████| 426/426 [00:13<00:00, 30.74it/s]\n",
-      "Epoch: 63. Train.      Loss: 0.125 | Accuracy: 0.771:  73%|███████▎  | 1655/2267 [03:30<01:19,  7.75it/s]"
+      "Epoch: 63. Train.      Loss: 0.125 | Accuracy: 0.772: 100%|██████████| 2267/2267 [04:48<00:00,  7.87it/s]\n",
+      "Epoch: 63. Validation. Loss: 0.614 | Accuracy: 0.834: 100%|██████████| 426/426 [00:13<00:00, 30.79it/s]\n",
+      "Epoch: 64. Train.      Loss: 0.124 | Accuracy: 0.772: 100%|██████████| 2267/2267 [04:54<00:00,  7.71it/s]\n",
+      "Epoch: 64. Validation. Loss: 0.547 | Accuracy: 0.854: 100%|██████████| 426/426 [00:14<00:00, 29.06it/s]\n",
+      "Epoch: 65. Train.      Loss: 0.124 | Accuracy: 0.773: 100%|██████████| 2267/2267 [04:55<00:00,  7.68it/s]\n",
+      "Epoch: 65. Validation. Loss: 0.567 | Accuracy: 0.853: 100%|██████████| 426/426 [00:14<00:00, 29.05it/s]\n",
+      "Epoch: 66. Train.      Loss: 0.124 | Accuracy: 0.772: 100%|██████████| 2267/2267 [04:46<00:00,  7.90it/s]\n",
+      "Epoch: 66. Validation. Loss: 0.582 | Accuracy: 0.853: 100%|██████████| 426/426 [00:13<00:00, 30.83it/s]\n",
+      "Epoch: 67. Train.      Loss: 0.125 | Accuracy: 0.770: 100%|██████████| 2267/2267 [04:45<00:00,  7.94it/s]\n",
+      "Epoch: 67. Validation. Loss: 0.586 | Accuracy: 0.850: 100%|██████████| 426/426 [00:13<00:00, 30.47it/s]\n",
+      "Epoch: 68. Train.      Loss: 0.124 | Accuracy: 0.774: 100%|██████████| 2267/2267 [04:55<00:00,  7.68it/s]\n",
+      "Epoch: 68. Validation. Loss: 0.621 | Accuracy: 0.850: 100%|██████████| 426/426 [00:14<00:00, 28.94it/s]\n",
+      "Epoch: 69. Train.      Loss: 0.124 | Accuracy: 0.778: 100%|██████████| 2267/2267 [04:54<00:00,  7.70it/s]\n",
+      "Epoch: 69. Validation. Loss: 0.551 | Accuracy: 0.852: 100%|██████████| 426/426 [00:14<00:00, 30.32it/s]\n",
+      "Epoch: 70. Train.      Loss: 0.125 | Accuracy: 0.773: 100%|██████████| 2267/2267 [04:46<00:00,  7.90it/s]\n",
+      "Epoch: 70. Validation. Loss: 0.598 | Accuracy: 0.843: 100%|██████████| 426/426 [00:14<00:00, 30.29it/s]\n",
+      "Epoch: 71. Train.      Loss: 0.124 | Accuracy: 0.775: 100%|██████████| 2267/2267 [04:45<00:00,  7.93it/s]\n",
+      "Epoch: 71. Validation. Loss: 0.595 | Accuracy: 0.854: 100%|██████████| 426/426 [00:13<00:00, 30.74it/s]\n",
+      "Epoch: 72. Train.      Loss: 0.124 | Accuracy: 0.774: 100%|██████████| 2267/2267 [04:45<00:00,  7.94it/s]\n",
+      "Epoch: 72. Validation. Loss: 0.625 | Accuracy: 0.836: 100%|██████████| 426/426 [00:13<00:00, 30.85it/s]\n",
+      "Epoch: 73. Train.      Loss: 0.124 | Accuracy: 0.775: 100%|██████████| 2267/2267 [04:45<00:00,  7.95it/s]\n",
+      "Epoch: 73. Validation. Loss: 0.607 | Accuracy: 0.855: 100%|██████████| 426/426 [00:13<00:00, 30.68it/s]\n",
+      "Epoch: 74. Train.      Loss: 0.123 | Accuracy: 0.779: 100%|██████████| 2267/2267 [04:46<00:00,  7.92it/s]\n",
+      "Epoch: 74. Validation. Loss: 0.578 | Accuracy: 0.845: 100%|██████████| 426/426 [00:14<00:00, 30.12it/s]\n",
+      "Epoch: 75. Train.      Loss: 0.125 | Accuracy: 0.773: 100%|██████████| 2267/2267 [04:47<00:00,  7.88it/s]\n",
+      "Epoch: 75. Validation. Loss: 0.535 | Accuracy: 0.853: 100%|██████████| 426/426 [00:14<00:00, 29.70it/s]\n",
+      "Epoch: 76. Train.      Loss: 0.124 | Accuracy: 0.774: 100%|██████████| 2267/2267 [04:49<00:00,  7.82it/s]\n",
+      "Epoch: 76. Validation. Loss: 0.559 | Accuracy: 0.841: 100%|██████████| 426/426 [00:14<00:00, 29.72it/s]\n",
+      "Epoch: 77. Train.      Loss: 0.124 | Accuracy: 0.773: 100%|██████████| 2267/2267 [04:47<00:00,  7.88it/s]\n",
+      "Epoch: 77. Validation. Loss: 0.575 | Accuracy: 0.848: 100%|██████████| 426/426 [00:13<00:00, 30.79it/s]\n",
+      "Epoch: 78. Train.      Loss: 0.123 | Accuracy: 0.782: 100%|██████████| 2267/2267 [04:45<00:00,  7.94it/s]\n",
+      "Epoch: 78. Validation. Loss: 0.540 | Accuracy: 0.864: 100%|██████████| 426/426 [00:13<00:00, 30.87it/s]\n",
+      "  0%|          | 0/2267 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Save best weight at acc 0.8641, epoch: 78\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 79. Train.      Loss: 0.124 | Accuracy: 0.777: 100%|██████████| 2267/2267 [04:42<00:00,  8.03it/s]\n",
+      "Epoch: 79. Validation. Loss: 0.617 | Accuracy: 0.845: 100%|██████████| 426/426 [00:13<00:00, 31.20it/s]\n",
+      "Epoch: 80. Train.      Loss: 0.123 | Accuracy: 0.782: 100%|██████████| 2267/2267 [04:40<00:00,  8.09it/s]\n",
+      "Epoch: 80. Validation. Loss: 0.516 | Accuracy: 0.857: 100%|██████████| 426/426 [00:13<00:00, 31.16it/s]\n",
+      "Epoch: 81. Train.      Loss: 0.123 | Accuracy: 0.780: 100%|██████████| 2267/2267 [04:39<00:00,  8.11it/s]\n",
+      "Epoch: 81. Validation. Loss: 0.532 | Accuracy: 0.854: 100%|██████████| 426/426 [00:13<00:00, 31.36it/s]\n",
+      "Epoch: 82. Train.      Loss: 0.122 | Accuracy: 0.775: 100%|██████████| 2267/2267 [04:39<00:00,  8.12it/s]\n",
+      "Epoch: 82. Validation. Loss: 0.511 | Accuracy: 0.867: 100%|██████████| 426/426 [00:13<00:00, 31.23it/s]\n",
+      "  0%|          | 0/2267 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Save best weight at acc 0.8666, epoch: 82\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 83. Train.      Loss: 0.123 | Accuracy: 0.783: 100%|██████████| 2267/2267 [04:40<00:00,  8.09it/s]\n",
+      "Epoch: 83. Validation. Loss: 0.571 | Accuracy: 0.852: 100%|██████████| 426/426 [00:13<00:00, 31.21it/s]\n",
+      "Epoch: 84. Train.      Loss: 0.123 | Accuracy: 0.780: 100%|██████████| 2267/2267 [04:39<00:00,  8.10it/s]\n",
+      "Epoch: 84. Validation. Loss: 0.592 | Accuracy: 0.851: 100%|██████████| 426/426 [00:13<00:00, 31.31it/s]\n",
+      "Epoch: 85. Train.      Loss: 0.122 | Accuracy: 0.785: 100%|██████████| 2267/2267 [04:40<00:00,  8.10it/s]\n",
+      "Epoch: 85. Validation. Loss: 0.606 | Accuracy: 0.846: 100%|██████████| 426/426 [00:13<00:00, 31.23it/s]\n",
+      "Epoch: 86. Train.      Loss: 0.123 | Accuracy: 0.781: 100%|██████████| 2267/2267 [04:41<00:00,  8.06it/s]\n",
+      "Epoch: 86. Validation. Loss: 0.636 | Accuracy: 0.837: 100%|██████████| 426/426 [00:13<00:00, 30.88it/s]\n",
+      "Epoch: 87. Train.      Loss: 0.123 | Accuracy: 0.778: 100%|██████████| 2267/2267 [04:42<00:00,  8.01it/s]\n",
+      "Epoch: 87. Validation. Loss: 0.550 | Accuracy: 0.858: 100%|██████████| 426/426 [00:14<00:00, 29.50it/s]\n",
+      "Epoch: 88. Train.      Loss: 0.124 | Accuracy: 0.780: 100%|██████████| 2267/2267 [04:45<00:00,  7.95it/s]\n",
+      "Epoch: 88. Validation. Loss: 0.583 | Accuracy: 0.859: 100%|██████████| 426/426 [00:14<00:00, 30.02it/s]\n",
+      "Epoch: 89. Train.      Loss: 0.123 | Accuracy: 0.782: 100%|██████████| 2267/2267 [04:45<00:00,  7.95it/s]\n",
+      "Epoch: 89. Validation. Loss: 0.575 | Accuracy: 0.861: 100%|██████████| 426/426 [00:13<00:00, 30.89it/s]\n",
+      "Epoch: 90. Train.      Loss: 0.122 | Accuracy: 0.783: 100%|██████████| 2267/2267 [04:48<00:00,  7.87it/s]\n",
+      "Epoch: 90. Validation. Loss: 0.599 | Accuracy: 0.832: 100%|██████████| 426/426 [00:14<00:00, 30.21it/s]\n",
+      "Epoch: 91. Train.      Loss: 0.123 | Accuracy: 0.781: 100%|██████████| 2267/2267 [04:47<00:00,  7.88it/s]\n",
+      "Epoch: 91. Validation. Loss: 0.555 | Accuracy: 0.860: 100%|██████████| 426/426 [00:14<00:00, 30.33it/s]\n",
+      "Epoch: 92. Train.      Loss: 0.122 | Accuracy: 0.783: 100%|██████████| 2267/2267 [04:46<00:00,  7.91it/s]\n",
+      "Epoch: 92. Validation. Loss: 0.538 | Accuracy: 0.859: 100%|██████████| 426/426 [00:14<00:00, 30.33it/s]\n",
+      "Epoch: 93. Train.      Loss: 0.123 | Accuracy: 0.784: 100%|██████████| 2267/2267 [04:46<00:00,  7.91it/s]\n",
+      "Epoch: 93. Validation. Loss: 0.565 | Accuracy: 0.847: 100%|██████████| 426/426 [00:13<00:00, 30.45it/s]\n",
+      "Epoch: 94. Train.      Loss: 0.122 | Accuracy: 0.786: 100%|██████████| 2267/2267 [04:45<00:00,  7.94it/s]\n",
+      "Epoch: 94. Validation. Loss: 0.559 | Accuracy: 0.854: 100%|██████████| 426/426 [00:13<00:00, 30.67it/s]\n",
+      "Epoch: 95. Train.      Loss: 0.123 | Accuracy: 0.781: 100%|██████████| 2267/2267 [04:45<00:00,  7.94it/s]\n",
+      "Epoch: 95. Validation. Loss: 0.641 | Accuracy: 0.838: 100%|██████████| 426/426 [00:13<00:00, 30.61it/s]\n",
+      "Epoch: 96. Train.      Loss: 0.122 | Accuracy: 0.789: 100%|██████████| 2267/2267 [04:45<00:00,  7.94it/s]\n",
+      "Epoch: 96. Validation. Loss: 0.587 | Accuracy: 0.856: 100%|██████████| 426/426 [00:13<00:00, 30.56it/s]\n",
+      "Epoch: 97. Train.      Loss: 0.122 | Accuracy: 0.788: 100%|██████████| 2267/2267 [04:45<00:00,  7.93it/s]\n",
+      "Epoch: 97. Validation. Loss: 0.609 | Accuracy: 0.843: 100%|██████████| 426/426 [00:13<00:00, 30.52it/s]\n",
+      "Epoch: 98. Train.      Loss: 0.122 | Accuracy: 0.789: 100%|██████████| 2267/2267 [04:45<00:00,  7.94it/s]\n",
+      "Epoch: 98. Validation. Loss: 0.607 | Accuracy: 0.845: 100%|██████████| 426/426 [00:13<00:00, 30.45it/s]\n",
+      "Epoch: 99. Train.      Loss: 0.122 | Accuracy: 0.786: 100%|██████████| 2267/2267 [04:45<00:00,  7.95it/s]\n",
+      "Epoch: 99. Validation. Loss: 0.604 | Accuracy: 0.840: 100%|██████████| 426/426 [00:14<00:00, 30.35it/s]\n",
+      "Epoch: 100. Train.      Loss: 0.122 | Accuracy: 0.781: 100%|██████████| 2267/2267 [04:45<00:00,  7.94it/s]\n",
+      "Epoch: 100. Validation. Loss: 0.568 | Accuracy: 0.858: 100%|██████████| 426/426 [00:13<00:00, 30.59it/s]\n"
      ]
     }
    ],
@@ -2108,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
