--- a/cassava_preds.ipynb
+++ b/cassava_preds.ipynb
@@ -457,29 +457,21 @@
    "source": [
     "models_name = [\"resnest26d\",\"resnest50d\", \"skresnet50\", \"tf_efficientnet_b3_ns\", \"vit_base_patch16_384\"]\n",
     "WEIGHTS = [\n",
-    "    \"./weights/resnest26d/resnest26d_fold0_best_epoch_13_final_mixup.pth\",\n",
-    "    \"./weights/resnest26d/resnest26d_fold0_best_epoch_28_final_1st.pth\",\n",
-    "    \"./weights/resnest26d/resnest26d_fold0_best_epoch_46_final_1st.pth\",\n",
-    "    \"./weights/resnest26d/resnest26d_fold0_best_epoch_4_final_512.pth\",\n",
-    "    \"./weights/resnest26d/resnest26d_fold1_best_epoch_27_final_mix.pth\",\n",
-    "    \"./weights/resnest26d/resnest26d_fold1_best_epoch_7_finale_ex_hnm.pth\", #5\n",
-    "    \"./weights/resnest26d/resnest26d_fold2_best_epoch_3_final_hnm.pth\",\n",
-    "    \"./weights/resnest26d/resnest26d_fold2_best_epoch_4_final_512.pth\",\n",
-    "    \"./weights/resnest26d/resnest26d_fold4_best_epoch_12_cutmix.pth\",\n",
-    "    \"./weights/resnest26d/resnest26d_fold4_best_epoch_21_final_512.pth\",\n",
-    "    \"./weights/resnest26d/resnest26d_fold4_best_epoch_26_mix.pth\", #10\n",
-    "    \"./weights/resnest26d/resnest26d_fold4_best_epoch_29_1st.pth\",\n",
-    "    \"./weights/resnest26d/resnest26d_fold4_best_epoch_3_external.pth\",\n",
-    "    \"./weights/resnest50d/resnest50d_fold0_best_epoch_25.pth\",\n",
-    "    \"./weights/resnest50d/resnest50d_fold1_best_epoch_38_clean_1st.pth\",\n",
-    "    \"./weights/resnest50d/resnest50d_fold1_best_epoch_95_final_1st.pth\", #15\n",
-    "    \"./weights/resnest50d/resnest50d_fold1_best_epoch_9_final_512.pth\",\n",
-    "    \"./weights/resnest50d/resnest50d_fold2_best_epoch_50_final_1st.pth\",\n",
-    "    \"./weights/resnest50d/resnest50d_fold3_best_epoch_66.pth\",\n",
-    "    \"./weights/resnest50d/resnest50d_fold4_best_epoch_39.pth\",\n",
-    "    \"./weights/tf_efficientnet_b3_ns/tf_efficientnet_b3_ns_fold1_best_epoch_19_external.pth\", #20\n",
-    "    \"./weights/tf_efficientnet_b3_ns/tf_efficientnet_b3_ns_fold1_best_epoch_1_final_512.pth\",\n",
-    "    \"./weights/tf_efficientnet_b3_ns/tf_efficientnet_b3_ns_fold1_best_epoch_26_512.pth\",\n",
+    "        \"./weights/resnest50d/resnest50d_fold0_best_epoch_30_final_2nd.pth\",\n",
+    "        \"./weights/resnest50d/resnest50d_fold1_best_epoch_95_final_1st.pth\",\n",
+    "        \"./weights/resnest50d/resnest50d_fold2_best_epoch_50_final_1st.pth\",\n",
+    "        \"./weights/resnest50d/resnest50d_fold3_best_epoch_2_final_2nd.pth\",\n",
+    "        \"./weights/resnest50d/resnest50d_fold4_best_epoch_10_final_2nd.pth\",\n",
+    "        #4\n",
+    "        \"./weights/resnest26d/resnest26d_fold0_best_epoch_4_final_2nd.pth\",\n",
+    "        \"./weights/resnest26d/resnest26d_fold1_best_epoch_7_final_2nd.pth\",\n",
+    "        \"./weights/resnest26d/resnest26d_fold2_best_epoch_4_final_2nd.pth\",\n",
+    "        \"./weights/resnest26d/resnest26d_fold3_best_epoch_58.pth\",\n",
+    "        \"./weights/resnest26d/resnest26d_fold4_best_epoch_21_final_2nd.pth\",\n",
+    "        #9\n",
+    "        \"./weights/tf_efficientnet_b3_ns/tf_efficientnet_b3_ns_fold1_best_epoch_19_external.pth\", \n",
+    "        \"./weights/tf_efficientnet_b3_ns/tf_efficientnet_b3_ns_fold1_best_epoch_1_final_512.pth\",\n",
+    "        \"./weights/tf_efficientnet_b3_ns/tf_efficientnet_b3_ns_fold1_best_epoch_26_512.pth\",\n",
     "\n",
     "]\n",
     "# Single model\n",
@@ -487,9 +479,9 @@
     "ckpt_index = 0\n",
     "\n",
     "# kfold\n",
-    "fold_model_index = 1\n",
-    "fold_ckpt_index = [14,15,16] \n",
-    "fold_ckpt_weight = [1,1,1]\n",
+    "fold_model_index = 0\n",
+    "fold_ckpt_index = [0,1,2,3,4] \n",
+    "fold_ckpt_weight = [1,1,1,1,1]\n",
     "\n",
     "# Ensemble\n",
     "ensemble_models_name = [\"resnest26d\" ,\"tf_efficientnet_b3_ns\", \"resnest50d\"]\n",
@@ -1158,7 +1150,7 @@
     "                visualize_tta(data, pred)\n",
     "            tta_output = []   \n",
     "            for i, image in enumerate(data[\"images\"]):\n",
-    "                kfout = [torch.softmax(model(imae), dim=1) for model in models]\n",
+    "                kfout = [torch.softmax(model(image), dim=1) for model in models]\n",
     "                tta_output.extend(torch.stack(kfout, dim=0))\n",
     "            tta_output = torch.stack(tta_output, dim=0).mean(dim=0)\n",
     "            accuracy = accuracy_score(tta_output.argmax(1).cpu(), data[\"labels\"][0].cpu())\n",
@@ -1231,6 +1223,75 @@
     "            ) \n",
     "if params[\"ensemble\"]:# and params[\"tta\"] and not params[\"kfold_pred\"]:\n",
     "    tta_validate_ensemble_model(val_pred_loader, params, valid_test=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params[\"tta\"] = True\n",
+    "create_pseudo = False\n",
+    "num_tta = len(test_transform_tta)\n",
+    "def pseudo_predict(loader, model, params, valid_test=False):\n",
+    "    preds = {'image_id':[],\n",
+    "             'label': []}\n",
+    "    model = declare_model(models_name[fold_model_index])\n",
+    "    metric_monitor = MetricMonitor()\n",
+    "    model.eval()\n",
+    "    stream = tqdm(loader)\n",
+    "    models = []\n",
+    "    for ckpt, weight in zip(fold_ckpt_index, fold_ckpt_weight):\n",
+    "        state_dict = torch.load(WEIGHTS[ckpt])\n",
+    "        fold_acc = state_dict[\"preds\"]\n",
+    "        print(f\"Load pretrained model: {WEIGHTS[ckpt]} with acc: {fold_acc}\")\n",
+    "        model.load_state_dict(state_dict[\"model\"])\n",
+    "        models.append(model)\n",
+    "        \n",
+    "    with torch.no_grad():\n",
+    "        for i, data in enumerate(stream, start=1):\n",
+    "            if params[\"visualize\"]:\n",
+    "                visualize_tta(data, pred)\n",
+    "            tta_output = []   \n",
+    "            for i, image in enumerate(data[\"images\"]):\n",
+    "                kfout = [torch.softmax(model(imae), dim=1) for model in models]\n",
+    "                tta_output.extend(torch.stack(kfout, dim=0))\n",
+    "            tta_output = torch.stack(tta_output, dim=0).mean(dim=0)\n",
+    "            pred = torch.argmax(tta_output, dim=1).cpu().numpy()\n",
+    "            for j,p in enumerate(pred):\n",
+    "                if output[j][p] > 0.8:\n",
+    "                    preds['image_id'].append(data[\"image_ids\"][0][j])\n",
+    "                    preds['label'].append(p)\n",
+    "    return preds\n",
+    "if create_pseudo:\n",
+    "    ## add external data\n",
+    "    test_external_dataset = TestDataset(test_external, transform=test_transform_tta, valid_test=True)\n",
+    "    test_external_loader = DataLoader(\n",
+    "        test_external_dataset, batch_size=params['batch_size'], shuffle=False, num_workers=4, pin_memory=True,\n",
+    "    )  \n",
+    "    pred_test_external = pseudo_predict(test_external_loader, model, params, valid_test=True)\n",
+    "    pseudo = pd.DataFrame(pred_test_external)\n",
+    "    pseudo.to_csv(f'{root}/external/test_external_pseudo.csv' ,index=False)\n",
+    "    visualize_class_dis(pseudo, 'external pseudo data')\n",
+    "\n",
+    "#     #Val Train\n",
+    "#     pseudo_val_dataset = TestDataset(val_folds, transform=test_transform_tta, valid_test=True)\n",
+    "#     pseudo_val_loader = DataLoader(\n",
+    "#         pseudo_val_dataset, batch_size=params['batch_size'], shuffle=False, num_workers=4, pin_memory=True,\n",
+    "#     )  \n",
+    "#     pred_val_pseudo = pseudo_predict(pseudo_val_loader, model, params, valid_test=True)\n",
+    "#     pseudo = pd.DataFrame(pred_val_pseudo)\n",
+    "#     pseudo.to_csv(f'{root}/val_{params[\"fold\"]}_pseudo.csv' ,index=False)\n",
+    "\n",
+    "\n",
+    "#     pseudo_train_dataset = TestDataset(train_folds, transform=test_transform_tta, valid_test=True)\n",
+    "#     pseudo_train_loader = DataLoader(\n",
+    "#         pseudo_train_dataset, batch_size=params['batch_size'], shuffle=False, num_workers=4, pin_memory=True,\n",
+    "#     )  \n",
+    "#     pred_train_pseudo = pseudo_predict(pseudo_train_loader, model, params, valid_test=True)\n",
+    "#     pseudo = pd.DataFrame(pred_train_pseudo)\n",
+    "#     pseudo.to_csv(f'{root}/train_{params[\"fold\"]}_pseudo.csv' ,index=False)"
    ]
   },
   {
@@ -1325,72 +1386,6 @@
     "test.to_csv('submission.csv', index=False)\n",
     "test.head(n=10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params[\"tta\"] = True\n",
-    "create_pseudo = False\n",
-    "num_tta = len(test_transform_tta)\n",
-    "def pseudo_predict(loader, model, params, valid_test=False):\n",
-    "    preds = {'image_id':[],\n",
-    "             'label': []}\n",
-    "    model.eval()\n",
-    "    stream = tqdm(loader)\n",
-    "    \n",
-    "    with torch.no_grad():\n",
-    "        for i, data in enumerate(stream, start=1):\n",
-    "            ## TTA output\n",
-    "            tta_output = []   \n",
-    "            for i, image in enumerate(data[\"images\"]):\n",
-    "                tta_output.append(model(image))\n",
-    "            tta_output = torch.stack(tta_output, dim=0).mean(dim=0)\n",
-    "            output = torch.softmax(tta_output, dim=1)\n",
-    "            pred = torch.argmax(output, dim=1).cpu().numpy()\n",
-    "            for j,p in enumerate(pred):\n",
-    "                if output[j][p] > 0.7:\n",
-    "                    preds['image_id'].append(data[\"image_ids\"][0][j])\n",
-    "                    preds['label'].append(p)\n",
-    "    return preds\n",
-    "if create_pseudo:\n",
-    "    ## add external data\n",
-    "    test_external_dataset = TestDataset(test_external, transform=test_transform_tta, valid_test=True)\n",
-    "    test_external_loader = DataLoader(\n",
-    "        test_external_dataset, batch_size=params['batch_size'], shuffle=False, num_workers=4, pin_memory=True,\n",
-    "    )  \n",
-    "    pred_test_external = pseudo_predict(test_external_loader, model, params, valid_test=True)\n",
-    "    pseudo = pd.DataFrame(pred_test_external)\n",
-    "    pseudo.to_csv(f'{root}/external/test_external_pseudo.csv' ,index=False)\n",
-    "    visualize_class_dis(pseudo, 'external pseudo data')\n",
-    "\n",
-    "    #Val Train\n",
-    "    pseudo_val_dataset = TestDataset(val_folds, transform=test_transform_tta, valid_test=True)\n",
-    "    pseudo_val_loader = DataLoader(\n",
-    "        pseudo_val_dataset, batch_size=params['batch_size'], shuffle=False, num_workers=4, pin_memory=True,\n",
-    "    )  \n",
-    "    pred_val_pseudo = pseudo_predict(pseudo_val_loader, model, params, valid_test=True)\n",
-    "    pseudo = pd.DataFrame(pred_val_pseudo)\n",
-    "    pseudo.to_csv(f'{root}/val_{params[\"fold\"]}_pseudo.csv' ,index=False)\n",
-    "\n",
-    "\n",
-    "    pseudo_train_dataset = TestDataset(train_folds, transform=test_transform_tta, valid_test=True)\n",
-    "    pseudo_train_loader = DataLoader(\n",
-    "        pseudo_train_dataset, batch_size=params['batch_size'], shuffle=False, num_workers=4, pin_memory=True,\n",
-    "    )  \n",
-    "    pred_train_pseudo = pseudo_predict(pseudo_train_loader, model, params, valid_test=True)\n",
-    "    pseudo = pd.DataFrame(pred_train_pseudo)\n",
-    "    pseudo.to_csv(f'{root}/train_{params[\"fold\"]}_pseudo.csv' ,index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
