update fmix, update resnest50 fold 024

--- a/cassava_classification.ipynb
+++ b/cassava_classification.ipynb
@@ -1756,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 546,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1889,7 +1889,18 @@
       "Epoch: 23. Validation. Loss: 0.484 | Accuracy: 0.893: 100%|██████████| 535/535 [00:36<00:00, 14.80it/s]\n",
       "Epoch: 24. Train.      Loss: 0.885 | Accuracy: 0.822: 100%|██████████| 2847/2847 [12:00<00:00,  3.95it/s]\n",
       "Epoch: 24. Validation. Loss: 0.521 | Accuracy: 0.888: 100%|██████████| 535/535 [00:36<00:00, 14.79it/s]\n",
-      "Epoch: 25. Train.      Loss: 0.887 | Accuracy: 0.824:  43%|████▎     | 1215/2847 [05:07<06:53,  3.95it/s]"
+      "Epoch: 25. Train.      Loss: 0.890 | Accuracy: 0.822: 100%|██████████| 2847/2847 [12:01<00:00,  3.94it/s]\n",
+      "Epoch: 25. Validation. Loss: 0.488 | Accuracy: 0.882: 100%|██████████| 535/535 [00:36<00:00, 14.72it/s]\n",
+      "Epoch: 26. Train.      Loss: 0.895 | Accuracy: 0.819: 100%|██████████| 2847/2847 [12:02<00:00,  3.94it/s]\n",
+      "Epoch: 26. Validation. Loss: 0.505 | Accuracy: 0.887: 100%|██████████| 535/535 [00:36<00:00, 14.73it/s]\n",
+      "Epoch: 27. Train.      Loss: 0.893 | Accuracy: 0.824: 100%|██████████| 2847/2847 [12:03<00:00,  3.94it/s]\n",
+      "Epoch: 27. Validation. Loss: 0.452 | Accuracy: 0.894: 100%|██████████| 535/535 [00:36<00:00, 14.75it/s]\n",
+      "Epoch: 28. Train.      Loss: 0.891 | Accuracy: 0.819: 100%|██████████| 2847/2847 [12:02<00:00,  3.94it/s]\n",
+      "Epoch: 28. Validation. Loss: 0.519 | Accuracy: 0.854: 100%|██████████| 535/535 [00:36<00:00, 14.75it/s]\n",
+      "Epoch: 29. Train.      Loss: 0.888 | Accuracy: 0.821: 100%|██████████| 2847/2847 [12:02<00:00,  3.94it/s]\n",
+      "Epoch: 29. Validation. Loss: 0.503 | Accuracy: 0.889: 100%|██████████| 535/535 [00:36<00:00, 14.74it/s]\n",
+      "Epoch: 30. Train.      Loss: 0.890 | Accuracy: 0.821: 100%|██████████| 2847/2847 [12:02<00:00,  3.94it/s]\n",
+      "Epoch: 30. Validation. Loss: 0.497 | Accuracy: 0.892: 100%|██████████| 535/535 [00:36<00:00, 14.73it/s]\n"
      ]
     }
    ],
@@ -1904,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 547,
    "metadata": {},
    "outputs": [],
    "source": [
