update train distill soft label

--- a/cassava_classification.ipynb
+++ b/cassava_classification.ipynb
@@ -1697,55 +1697,28 @@
     "        stream = tqdm(update_train_loader)\n",
     "    else:\n",
     "        stream = tqdm(train_loader)\n",
-    "#     for i, (images, target, _) in enumerate(stream, start=1):\n",
-    "#         images = images.to(params[\"device\"]) #, non_blocking=True)\n",
-    "#         target = target.to(params[\"device\"]) #, non_blocking=True) #.view(-1,params['batch_size'])\n",
-    "#         if params[\"mix_up\"]:\n",
-    "#             images , target = mixup_fn(images, target)\n",
-    "#         output = model(images)\n",
-    "#         if isinstance(output, (tuple, list)):\n",
-    "#             output = output[0]\n",
-    "#         loss0 = criterion(output, target)\n",
-    "# #         loss1 = symetric_criterion(output, target)\n",
-    "# #         loss2 = asymetric_criterion(output, target)\n",
-    "#         loss = loss0 #+ loss2\n",
-    "#         if params['gradient_accumulation_steps'] > 1:\n",
-    "#             loss = loss / params['gradient_accumulation_steps']\n",
-    "        #fmix\n",
-    "        for i, (images, target, _) in enumerate(stream, start=1):\n",
-    "            mix_decision = np.random.rand()\n",
-    "            with autocast():\n",
-    "                images = images.to(params[\"device\"]) #, non_blocking=True)\n",
-    "                target = target.to(params[\"device\"]) #, non_blocking=True) #.view(-1,params['batch_size'])\n",
-    "                # if mix_decision < 0.25:\n",
-    "                #     if params[\"mix_up\"]:\n",
-    "                #         images , mtarget = mixup_fn(images, target)\n",
-    "                # elif mix_decision >=0.25 and mix_decision < 0.5:\n",
-    "                if params[\"fmix\"]:\n",
-    "                    images , ftarget = fmix(images, target, alpha=1., decay_power=5.,\n",
-    "                                        shape=(params[\"image_size\"],params[\"image_size\"]),\n",
-    "                                        device=params[\"device\"])\n",
-    "                output = model(images)\n",
-    "                if isinstance(output, (tuple, list)):\n",
-    "                    output = output[0]\n",
-    "\n",
-    "                # if mix_decision < 0.25:\n",
-    "                #     loss = criterion(output, mtarget)\n",
-    "                # else:\n",
-    "                loss = criterion_fmix(output, ftarget[0]) * ftarget[2] + criterion_fmix(output, ftarget[1]) * (1. - ftarget[2])\n",
-    "\n",
-    "            if params['gradient_accumulation_steps'] > 1:\n",
-    "                loss = loss / params['gradient_accumulation_steps']\n",
-    "        \n",
-    "            accuracy = calculate_accuracy(output, target)\n",
-    "            metric_monitor.update(\"Loss\", loss.item())\n",
-    "            metric_monitor.update(\"Accuracy\", accuracy)\n",
-    "            optimizer.zero_grad()\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "            stream.set_description(\n",
-    "                \"Epoch: {epoch}. Train.      {metric_monitor}\".format(epoch=epoch, metric_monitor=metric_monitor)\n",
-    "            )"
+    "    for i, (images, target, _) in enumerate(stream, start=1):\n",
+    "        images = images.to(params[\"device\"]) #, non_blocking=True)\n",
+    "        target = target.to(params[\"device\"]) #, non_blocking=True) #.view(-1,params['batch_size'])\n",
+    "        if params[\"mix_up\"]:\n",
+    "            images , target = mixup_fn(images, target)\n",
+    "        output = model(images)\n",
+    "        if isinstance(output, (tuple, list)):\n",
+    "            output = output[0]\n",
+    "        loss = criterion(output, target)\n",
+    "        if params['gradient_accumulation_steps'] > 1:\n",
+    "            loss = loss / params['gradient_accumulation_steps']\n",
+    "    \n",
+    "        accuracy = calculate_accuracy(output, target)\n",
+    "        metric_monitor.update(\"Loss\", loss.item())\n",
+    "        metric_monitor.update(\"Accuracy\", accuracy)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "    \n",
+    "        optimizer.step()\n",
+    "        stream.set_description(\n",
+    "            \"Epoch: {epoch}. Train.      {metric_monitor}\".format(epoch=epoch, metric_monitor=metric_monitor)\n",
+    "        )"
    ]
   },
   {
