--- a/cassava_classification_train.ipynb
+++ b/cassava_classification_train.ipynb
@@ -54,6 +54,9 @@
     "from timm.loss import LabelSmoothingCrossEntropy, SoftTargetCrossEntropy, JsdCrossEntropy\n",
     "from utils import Mixup, RandAugment, AsymmetricLossSingleLabel, SCELoss, fmix\n",
     "from PIL import Image\n",
+    "from torchcontrib.optim import SWA\n",
+    "from apex import amp\n",
+    "\n",
     "SEED = 42"
    ]
   },
@@ -468,6 +471,7 @@
     "    \"train_clean_only\": False,\n",
     "    \"test_external\": False,\n",
     "    \"load_pretrained\": True,\n",
+    "    \"fp16\": True,\n",
     "    \"resume\": False,\n",
     "    \"image_size\": 512,\n",
     "    \"num_classes\": 5,\n",
@@ -1579,27 +1583,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if \"efficientnet\" in params[\"model\"]:\n",
-    "    model = timm.create_model(\n",
-    "            params[\"model\"],\n",
+    "def declare_model(name, load_pretrained=False, weight=None):\n",
+    "    model = timm.create_model(name,\n",
     "            pretrained=False,\n",
-    "            num_classes=params[\"num_classes\"], \n",
-    "            drop_rate=params[\"drop_rate\"], \n",
-    "            drop_path_rate=0.3)\n",
+    "            num_classes=params[\"num_classes\"],\n",
+    "            drop_rate=params[\"drop_rate\"])\n",
+    "    model = model.to(params[\"device\"])\n",
     "    \n",
-    "elif \"skresnet\" in params[\"model\"]:\n",
-    "    model = timm.create_model(\n",
-    "            params[\"model\"],\n",
-    "            pretrained=True,\n",
-    "            num_classes=params[\"num_classes\"],\n",
-    "            drop_block_rate=params[\"drop_block\"],\n",
-    "            drop_path_rate=0.2)\n",
-    "else:\n",
-    "    model = timm.create_model(\n",
-    "            params[\"model\"],\n",
-    "            pretrained=True,\n",
-    "            num_classes=params[\"num_classes\"],\n",
-    "            drop_block_rate=params[\"drop_block\"])"
+    "    if params[\"distributed\"]:\n",
+    "        assert ValueError(\"No need to implement in a single machine\")\n",
+    "    else:\n",
+    "        model = torch.nn.DataParallel(model) \n",
+    "        \n",
+    "    if load_pretrained:\n",
+    "        state_dict = torch.load(weight)\n",
+    "        print(f\"Load pretrained model: {name} \",state_dict[\"preds\"])\n",
+    "        model.load_state_dict(state_dict[\"model\"])\n",
+    "        best_acc = state_dict[\"preds\"]   \n",
+    "    return model \n",
+    "model = declare_model(params[\"model\"], params[\"load_pretrained\"], WEIGHTS[ckpt_index])"
    ]
   },
   {
@@ -1646,6 +1648,13 @@
     "    criterion = SoftTargetCrossEntropy().to(params[\"device\"])\n",
     "asymetric_criterion = AsymmetricLossSingleLabel().to(params[\"device\"])\n",
     "symetric_criterion = SCELoss(smooth_label=params[\"smooth_label\"]).to(params[\"device\"])\n",
+    "    \n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=params[\"lr\"])\n",
+    "# scheduler = CosineAnnealingLR(optimizer, T_max=10, eta_min=params[\"lr_min\"], last_epoch=-1)\n",
+    "scheduler = CosineAnnealingWarmRestarts(optimizer, T_0=10, T_mult=1, eta_min=params[\"lr_min\"], last_epoch=-1)\n",
+    "\n",
+    "if params[\"fp16\"]:\n",
+    "    model, optimizer = amp.initialize(model, optimizer, opt_level=\"O1\",verbosity=0)\n",
     "\n",
     "if params[\"distributed\"]:\n",
     "    assert ValueError(\"No need to implement in a single machine\")\n",
@@ -1661,8 +1670,6 @@
     "        update_train_data = update_hard_sample(train_loader, model, val_criterion, thres=0.2)\n",
     "        update_train_folds = pd.DataFrame(data=update_train_data)\n",
     "        update_train_folds = pd.concat(5*[update_train_folds])\n",
-    "\n",
-    "        \n",
     "        #check the update distribution when filter data\n",
     "        print(\"Class distribution for the new data\")\n",
     "        visualize_class_dis(update_train_folds, params[\"fold\"])\n",
@@ -1673,11 +1680,7 @@
     "            update_train_dataset, batch_size=params[\"batch_size\"], shuffle=True, num_workers=params[\"num_workers\"], pin_memory=True,\n",
     "        )                \n",
     "else:\n",
-    "    best_acc = 0.\n",
-    "    \n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=params[\"lr\"])\n",
-    "# scheduler = CosineAnnealingLR(optimizer, T_max=10, eta_min=params[\"lr_min\"], last_epoch=-1)\n",
-    "scheduler = CosineAnnealingWarmRestarts(optimizer, T_0=10, T_mult=1, eta_min=params[\"lr_min\"], last_epoch=-1)"
+    "    best_acc = 0.85\n"
    ]
   },
   {
