--- a/ref/cassava-stacking_dung.ipynb
+++ b/ref/cassava-stacking_dung.ipynb
@@ -48,26 +48,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing /kaggle/input/cassava-packages/timm-0.3.1-py3-none-any.whl\r\n",
-      "Requirement already satisfied: torch>=1.0 in /opt/conda/lib/python3.7/site-packages (from timm==0.3.1) (1.6.0)\r\n",
-      "Requirement already satisfied: torchvision in /opt/conda/lib/python3.7/site-packages (from timm==0.3.1) (0.7.0)\r\n",
-      "Requirement already satisfied: future in /opt/conda/lib/python3.7/site-packages (from torch>=1.0->timm==0.3.1) (0.18.2)\r\n",
-      "Requirement already satisfied: numpy in /opt/conda/lib/python3.7/site-packages (from torch>=1.0->timm==0.3.1) (1.18.5)\r\n",
-      "Requirement already satisfied: pillow>=4.1.1 in /opt/conda/lib/python3.7/site-packages (from torchvision->timm==0.3.1) (8.0.1)\r\n",
-      "Installing collected packages: timm\r\n",
-      "Successfully installed timm-0.3.1\r\n",
-      "Processing /kaggle/input/cassava-packages/vision_transformer_pytorch-1.0.2-py2.py3-none-any.whl\r\n",
-      "Requirement already satisfied: numpy in /opt/conda/lib/python3.7/site-packages (from vision-transformer-pytorch==1.0.2) (1.18.5)\r\n",
-      "Requirement already satisfied: torch>=1.5.0 in /opt/conda/lib/python3.7/site-packages (from vision-transformer-pytorch==1.0.2) (1.6.0)\r\n",
-      "Requirement already satisfied: future in /opt/conda/lib/python3.7/site-packages (from torch>=1.5.0->vision-transformer-pytorch==1.0.2) (0.18.2)\r\n",
-      "Installing collected packages: vision-transformer-pytorch\r\n",
-      "Successfully installed vision-transformer-pytorch-1.0.2\r\n",
-      "\r\n",
-      "Downloading and Extracting Packages\r\n",
-      "######################################################################## | 100% \r\n",
-      "Preparing transaction: - \b\bdone\r\n",
-      "Verifying transaction: | \b\bdone\r\n",
-      "Executing transaction: - \b\bdone\r\n"
+      "Processing /kaggle/input/cassava-packages/timm-0.3.1-py3-none-any.whl\n",
+      "Requirement already satisfied: torch>=1.0 in /opt/conda/lib/python3.7/site-packages (from timm==0.3.1) (1.6.0)\n",
+      "Requirement already satisfied: torchvision in /opt/conda/lib/python3.7/site-packages (from timm==0.3.1) (0.7.0)\n",
+      "Requirement already satisfied: future in /opt/conda/lib/python3.7/site-packages (from torch>=1.0->timm==0.3.1) (0.18.2)\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.7/site-packages (from torch>=1.0->timm==0.3.1) (1.18.5)\n",
+      "Requirement already satisfied: pillow>=4.1.1 in /opt/conda/lib/python3.7/site-packages (from torchvision->timm==0.3.1) (8.0.1)\n",
+      "Installing collected packages: timm\n",
+      "Successfully installed timm-0.3.1\n",
+      "Processing /kaggle/input/cassava-packages/vision_transformer_pytorch-1.0.2-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.7/site-packages (from vision-transformer-pytorch==1.0.2) (1.18.5)\n",
+      "Requirement already satisfied: torch>=1.5.0 in /opt/conda/lib/python3.7/site-packages (from vision-transformer-pytorch==1.0.2) (1.6.0)\n",
+      "Requirement already satisfied: future in /opt/conda/lib/python3.7/site-packages (from torch>=1.5.0->vision-transformer-pytorch==1.0.2) (0.18.2)\n",
+      "Installing collected packages: vision-transformer-pytorch\n",
+      "Successfully installed vision-transformer-pytorch-1.0.2\n",
+      "\n",
+      "Downloading and Extracting Packages\n",
+      "######################################################################## | 100% \n",
+      "Preparing transaction: done\n",
+      "Verifying transaction: done\n",
+      "Executing transaction: done\n"
      ]
     }
    ],
@@ -2051,7 +2051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "papermill": {
    "duration": 222.889293,
